kubernetes/apps/longhorn-system/longhorn-system/app/test.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: testing-longhorn
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
---
apiVersion: v1
kind: Pod
metadata:
  name: longhorn-test
  namespace: testing-longhorn
spec:
  containers:
    - name: longhorn-test
      image: nginx:stable-alpine
      imagePullPolicy: IfNotPresent
      volumeMounts:
        - name: longhorn-pvc
          mountPath: /data
      ports:
        - containerPort: 80
  volumes:
    - name: longhorn-pvc
      persistentVolumeClaim:
        claimName: longhorn-pvc
