kubernetes/apps/longhorn-system/longhorn-system/app/ingress-metallb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: longhorn-metallb
  namespace: longhorn-system
  annotations:
spec:
  ports:
    targetPort: 80
  selector:
    app: longhorn-ui
  type: LoadBalancer
