kubernetes/apps/longhorn-system/longhorn-system/app/test-ingress.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: testing-service
  namespace: testing-longhorn
spec:
  selector:
    app: longhorn-test
  ports:
    - port: 80 # Default port for image
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testing-ingress
  namespace: testing-longhorn
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: testing-service
              servicePort: 80
